--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "vuex": "^3.1.3"
   },
   "devDependencies": {
+    "@babel/plugin-syntax-do-expressions": "^7.8.3",
     "@vue/cli-plugin-babel": "~4.3.0",
     "@vue/cli-plugin-router": "~4.3.0",
     "@vue/cli-plugin-vuex": "~4.3.0",
